--- a/tactical_analyses/post_publication/lcl_comparison/unweighted/000.1_filter-ess-scores.Rmd
+++ b/tactical_analyses/post_publication/lcl_comparison/unweighted/000.1_filter-ess-scores.Rmd
@@ -13,10 +13,11 @@ knitr::opts_chunk$set(echo = TRUE)
 
 "%&%" <- function(a,b) paste0(a,b)
 library("data.table"); library("tidyverse")
-serv.dir <- "/home/jason/science/servers/FUSE5/"
-work.dir <- serv.dir %&% "projects/t2d_classification/tactical_analyses/"
+serv.dir <- "/Users/jasont/science/servers/FUSE5/"
+work.dir <- serv.dir %&% "projects/t2d_classification/tactical_analyses/" %&% 
+  "post_publication/lcl_comparison/unweighted/"
 input.dir <- work.dir %&% "input_files/"
-
+afile.dir <- work.dir %&% "analysis_files/"
 ```
 
 ```{r}
@@ -37,8 +38,8 @@ gtf.df2 <- as.data.table(gtf.gr2,stringsAsFactors=FALSE)
 ```{r}
 
 gess.df <- fread(input.dir %&% "gene-expression-specificity-scores.txt")
-ess.df1 <- fread(input.dir %&% "expression_specificity_scores_v1.txt")
-ess.df2 <- fread(input.dir %&% "expression_specificity_scores_v2.txt")
+ess.df1 <- fread(afile.dir %&% "expression_specificity_scores_v1.txt")
+ess.df2 <- fread(afile.dir %&% "expression_specificity_scores_v2.txt")
 
 ```
 
@@ -74,7 +75,8 @@ ess_process <- function(ess.df){
                              "Islet"=row.df$islet.score,
                              "Muscle"=row.df$muscle.score,
                              "Adipose"=row.df$adipose.score,
-                             "Liver"=row.df$liver.score)
+                             "Liver"=row.df$liver.score,
+                             "LCL"=row.df$lcl.score)
       out.df <- rbind(out.df,build.df)
     }    
   }
